[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vox-pop"
version = "0.1.1"
description = "Public opinion for LLMs — HackerNews, Reddit, 4chan, Stack Exchange, Telegram. Zero API keys."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mushfique" }]
keywords = [
    "llm",
    "mcp",
    "public-opinion",
    "hackernews",
    "reddit",
    "4chan",
    "sentiment",
    "context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
vox-pop = "vox_pop.cli:main"
vox-pop-server = "vox_pop.server:main"

[project.urls]
Homepage = "https://github.com/mushfique-dgist/vox-pop"
Repository = "https://github.com/mushfique-dgist/vox-pop"
Issues = "https://github.com/mushfique-dgist/vox-pop/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_pop"]
